--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -231,12 +231,7 @@
       }
 
       .crm-button-type-cancel,
-      .crm-button_qf_Address_1_cancel,
-      .crm-button_qf_Address_2_cancel,
-      .crm-button_qf_Address_3_cancel,
-      .crm-button_qf_Address_4_cancel,
-      .crm-button_qf_Address_5_cancel,
-      .crm-button_qf_Address_6_cancel {
+      [class*="crm-button_qf_Address_"] {
         input {
           color: $gray-darker !important;
           border: 1px solid $gray-darker !important;
@@ -284,12 +279,7 @@
   }
 }
 
-#Address_1,
-#Address_2,
-#Address_3,
-#Address_4,
-#Address_5,
-#Address_6 {
+[class*="#Address_"] {
   padding: 10px;
 
   .form {
@@ -306,18 +296,7 @@
     width: 94% !important;
   }
 
-  #address_1_geo_code_1,
-  #address_1_geo_code_2,
-  #address_2_geo_code_1,
-  #address_2_geo_code_2,
-  #address_3_geo_code_1,
-  #address_3_geo_code_2,
-  #address_4_geo_code_1,
-  #address_4_geo_code_2,
-  #address_5_geo_code_1,
-  #address_5_geo_code_2,
-  #address_6_geo_code_1,
-  #address_6_geo_code_2 {
+  [class*="#address_"] {
     width: 18% !important;
   }
 
