--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -7,226 +7,245 @@
   </button>
   <h4 class="modal-title">Leave Request</h4>
 </div>
-<div ng-show="$ctrl.uiOptions.isAdmin"
-    class="row chr_leave-request-modal__user-info">
-  <span class="col-xs-6">Lawrence Longnamesburg (81)</span>
-  <span class="col-xs-6">Awaiting Approval</span>
-</div>
-
-<div class="modal-body chr_leave-request-modal__form">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="chr_custom-select chr_custom-select--full">
-        <select name="absenceTypeSelect"
-            ng-options="option.title for option in $ctrl.absenceTypes track by option.id"
-            ng-model="$ctrl.selectedAbsenceType"
-            ng-change="$ctrl.onAbsenceTypeChange()"></select>
-      </div>
-    </div>
+<crm-loading show="!$ctrl.loading.absenceTypes">
+  <div ng-show="$ctrl.uiOptions.isAdmin"
+      class="row chr_leave-request-modal__user-info">
+    <span class="col-xs-6">Lawrence Longnamesburg (81)</span>
+    <span class="col-xs-6">Awaiting Approval</span>
   </div>
 
-  <div class="row">
-    <div class="col-xs-12">
-      <uib-tabset class="chr_leave-request-modal__tab">
-        <uib-tab heading="Details">
-          <div class="row">
-            <div class="col-xs-12 form-horizontal">
-              <div class="form-group">
-                <label class="col-xs-4 control-label">No. of Days</label>
-                <div class="col-xs-8">
-                  <div class="btn-group btn-group-justified">
-                    <label class="btn active"
-                        ng-model="$ctrl.uiOptions.multipleDays"
-                        uib-btn-radio="true"
-                        ng-change="$ctrl.changeDayType()">Multiple Days</label>
-                    <label class="btn"
-                        ng-model="$ctrl.uiOptions.multipleDays"
-                        uib-btn-radio="false"
-                        ng-change="$ctrl.changeDayType()">Single Day</label>
+  <div class="modal-body chr_leave-request-modal__form">
+
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="chr_custom-select chr_custom-select--full">
+          <select name="absenceTypeSelect"
+              ng-options="option.title for option in $ctrl.absenceTypes track by option.id"
+              ng-model="$ctrl.selectedAbsenceType"
+              ng-change="$ctrl.onAbsenceTypeChange()"></select>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <uib-tabset class="chr_leave-request-modal__tab">
+          <uib-tab heading="Details">
+            <div class="row">
+              <div class="col-xs-12 form-horizontal">
+                <div class="form-group">
+                  <label class="col-xs-4 control-label">No. of Days</label>
+                  <div class="col-xs-8">
+                    <div class="btn-group btn-group-justified">
+                      <label class="btn active"
+                          ng-model="$ctrl.uiOptions.multipleDays"
+                          uib-btn-radio="true"
+                          ng-change="$ctrl.changeInNoOfDays()">Multiple Days</label>
+                      <label class="btn"
+                          ng-model="$ctrl.uiOptions.multipleDays"
+                          uib-btn-radio="false"
+                          ng-change="$ctrl.changeInNoOfDays()">Single Day</label>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 form-horizontal">
-              <div class="form-group">
-                <label class="col-xs-4 control-label">From Date
+            <div class="row">
+              <div class="col-xs-12 form-horizontal">
+                <div class="form-group">
+                  <label class="col-xs-4 control-label">From Date
                   <i class="fa fa-asterisk"></i>
                 </label>
-                <div class="col-xs-4">
-                  <div class="input-group">
-                    <input type="text"
-                        class="form-control"
-                        uib-datepicker-popup
-                        show-button-bar="false"
-                        datepicker-options="$ctrl.uiOptions.datePickerOptions"
-                        ng-model="$ctrl.uiOptions.fromDate"
-                        is-open="$ctrl.uiOptions.showDatePickerFrom"
-                        ng-change="$ctrl.onDateChange($ctrl.uiOptions.fromDate, true)" />
-                    <span class="input-group-btn">
+                  <div class="col-xs-4">
+                    <div class="input-group">
+                      <input type="text"
+                          class="form-control"
+                          uib-datepicker-popup
+                          show-button-bar="false"
+                          datepicker-options="$ctrl.uiOptions.datePickerOptions"
+                          ng-model="$ctrl.uiOptions.fromDate"
+                          is-open="$ctrl.uiOptions.showDatePickerFrom"
+                          ng-change="$ctrl.onDateChange($ctrl.uiOptions.fromDate, true)" />
+                      <span class="input-group-btn">
                         <button type="button" class="btn btn-default fa fa-calendar"
                                 ng-click="$ctrl.uiOptions.showDatePickerFrom = true"></button>
                       </span>
+                    </div>
                   </div>
-                </div>
-                <div class="col-xs-4">
-                  <div class="chr_custom-select chr_custom-select--full">
-                    <select name="fromDayTypeSelect"
-                        ng-options="option.label for option in $ctrl.leaveRequestFromDayTypes track by option.name"
-                        ng-model="$ctrl.uiOptions.selectedFromType"
-                        ng-change="$ctrl.calculateBalanceChange()">
+                  <div class="col-xs-4">
+                    <crm-loading show="!$ctrl.loading.fromDayTypes">
+                      <div class="chr_custom-select chr_custom-select--full">
+                        <select name="fromDayTypeSelect"
+                            ng-disabled="$ctrl.leaveRequestFromDayTypes.length == 1"
+                            ng-options="option.label for option in $ctrl.leaveRequestFromDayTypes track by option.name"
+                            ng-model="$ctrl.uiOptions.selectedFromType"
+                            ng-change="$ctrl.calculateBalanceChange()">
                       <option value="">Select</option>
                     </select>
+                    </crm-loading>
+                    </div>
                   </div>
+
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row"
-              ng-show="$ctrl.uiOptions.multipleDays">
-            <div class="col-xs-12 form-horizontal">
-              <div class="form-group">
-                <label class="col-xs-4 control-label">To Date
+            <div class="row"
+                ng-show="$ctrl.uiOptions.multipleDays">
+              <div class="col-xs-12 form-horizontal">
+                <div class="form-group">
+                  <label class="col-xs-4 control-label">To Date
                   <i class="fa fa-asterisk"></i>
                 </label>
-                <div class="col-xs-4">
-                  <div class="input-group">
-                    <input type="text"
-                        class="form-control"
-                        uib-datepicker-popup
-                        datepicker-options="$ctrl.uiOptions.datePickerOptions"
-                        show-button-bar="false"
-                        ng-model="$ctrl.uiOptions.toDate"
-                        is-open="$ctrl.uiOptions.showDatePickerTo"
-                        ng-change="$ctrl.onDateChange($ctrl.uiOptions.toDate, false)" />
-                    <span class="input-group-btn">
+                  <div class="col-xs-4">
+                    <div class="input-group">
+                      <input type="text"
+                          class="form-control"
+                          uib-datepicker-popup
+                          datepicker-options="$ctrl.uiOptions.datePickerOptions"
+                          show-button-bar="false"
+                          ng-model="$ctrl.uiOptions.toDate"
+                          is-open="$ctrl.uiOptions.showDatePickerTo"
+                          ng-change="$ctrl.onDateChange($ctrl.uiOptions.toDate, false)" />
+                      <span class="input-group-btn">
                         <button type="button" class="btn btn-default fa fa-calendar"
                                 ng-click="$ctrl.uiOptions.showDatePickerTo = true"></button>
                       </span>
+                    </div>
                   </div>
-                </div>
-                <div class="col-xs-4">
-                  <div class="chr_custom-select chr_custom-select--full">
-                    <select name="toDayTypeSelect"
-                        ng-options="option.label for option in $ctrl.leaveRequestToDayTypes track by option.name"
-                        ng-model="$ctrl.uiOptions.selectedToType"
-                        ng-change="$ctrl.calculateBalanceChange()">
+
+                  <div class="col-xs-4">
+                    <crm-loading show="!$ctrl.loading.fromDayTypes">
+                      <div class="chr_custom-select chr_custom-select--full">
+                        <select name="toDayTypeSelect"
+                            ng-disabled="$ctrl.leaveRequestToDayTypes.length == 1"
+                            ng-options="option.label for option in $ctrl.leaveRequestToDayTypes track by option.name"
+                            ng-model="$ctrl.uiOptions.selectedToType"
+                            ng-change="$ctrl.calculateBalanceChange()">
                       <option value="">Select</option>
                     </select>
+                      </div>
+                    </crm-loading>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div ng-show="$ctrl.uiOptions.showBalance">
-            <hr/>
-            <div class="row chr_leave-request-modal__form-group">
-              <div class="col-xs-4">Opening Balance</div>
-              <div class="col-xs-8">{{$ctrl.balance.opening}}</div>
-            </div>
-            <div class="row chr_leave-request-modal__form-group text-primary pointer"
-                ng-click="$ctrl.uiOptions.isChangeExpanded = !$ctrl.uiOptions.isChangeExpanded">
-              <div class="col-xs-4">
-                <i class="fa chr_leave-request-modal__chevron"
-                    aria-hidden="true"
-                    ng-class="{ 'fa-chevron-right': !$ctrl.uiOptions.isChangeExpanded, ' fa-chevron-down': $ctrl.uiOptions.isChangeExpanded }"></i> Change
+            <crm-loading show="!$ctrl.loading.$ctrl.loading.calculateBalanceChange">
+              <div ng-show="$ctrl.uiOptions.showBalance">
+                <hr/>
+                <div class="row chr_leave-request-modal__form-group">
+                  <div class="col-xs-4">Opening Balance</div>
+                  <div class="col-xs-8">{{$ctrl.balance.opening}}</div>
+                </div>
+                <div class="row chr_leave-request-modal__form-group text-primary pointer"
+                    ng-click="$ctrl.uiOptions.isChangeExpanded = !$ctrl.uiOptions.isChangeExpanded">
+                  <div class="col-xs-4">
+                    <i class="fa chr_leave-request-modal__chevron"
+                        aria-hidden="true"
+                        ng-class="{ 'fa-chevron-right': !$ctrl.uiOptions.isChangeExpanded, ' fa-chevron-down': $ctrl.uiOptions.isChangeExpanded }"></i> Change
+                  </div>
+                  <div class="col-xs-8">{{$ctrl.balance.change.amount}}</div>
+                </div>
+                <table class="table chr_leave-request-modal__table"
+                    ng-show="$ctrl.uiOptions.isChangeExpanded">
+                  <thead>
+                    <tr>
+                      <th>Date</th>
+                      <th>Selection</th>
+                      <th>Amount</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="breakdown in $ctrl.pagination.filteredbreakdown">
+                      <td>{{breakdown.date | date:'EEE '+ $ctrl.uiOptions.userDateFormat}}</td>
+                      <td>{{breakdown.type.label}}</td>
+                      <td>{{breakdown.amount}}</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td colspan="3"
+                          class="text-center">
+                        <uib-pagination data-ng-if="$ctrl.pagination.totalItems"
+                            total-items="$ctrl.pagination.totalItems"
+                            ng-model="$ctrl.pagination.currentPage"
+                            class="pagination"
+                            ng-change="$ctrl.pagination.pageChanged()"
+                            direction-links="false"
+                            items-per-page="$ctrl.pagination.numPerPage">
+                        </uib-pagination>
+                      </td>
+                    </tr>
+                  </tfoot>
+                </table>
+                <div class="row chr_leave-request-modal__form-group"
+                    ng-class="{'text-danger': $ctrl.balance.closing < 0}">
+                  <div class="col-xs-4">Closing Balance</div>
+                  <div class="col-xs-8">{{$ctrl.balance.closing}}</div>
+                </div>
               </div>
-              <div class="col-xs-8">{{$ctrl.balance.change.amount}}</div>
-            </div>
-            <table class="table chr_leave-request-modal__table"
-                ng-show="$ctrl.uiOptions.isChangeExpanded">
-              <thead>
-                <tr>
-                  <th>Date</th>
-                  <th>Selection</th>
-                  <th>Amount</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr ng-repeat="breakdown in $ctrl.pagination.filteredbreakdown">
-                  <td>{{breakdown.date | date:'EEE '+ $ctrl.uiOptions.userDateFormat}}</td>
-                  <td>{{breakdown.type.label}}</td>
-                  <td>{{breakdown.amount}}</td>
-                </tr>
-              </tbody>
-              <tfoot>
-                <tr>
-                  <td colspan="3"
-                      class="text-center">
-                    <uib-pagination data-ng-if="$ctrl.pagination.totalItems"
-                        total-items="$ctrl.pagination.totalItems"
-                        ng-model="$ctrl.pagination.currentPage"
-                        class="pagination"
-                        ng-change="$ctrl.pagination.pageChanged()"
-                        direction-links="false"
-                        items-per-page="$ctrl.pagination.numPerPage">
-                    </uib-pagination>
-                  </td>
-                </tr>
-              </tfoot>
-            </table>
-            <div class="row chr_leave-request-modal__form-group"
-                ng-class="{'text-danger': $ctrl.balance.closing < 0}">
-              <div class="col-xs-4">Closing Balance</div>
-              <div class="col-xs-8">{{$ctrl.balance.closing}}</div>
-            </div>
-          </div>
-        </uib-tab>
-        <uib-tab heading="Comments">
-        </uib-tab>
-        <uib-tab heading="Files">
-        </uib-tab>
-      </uib-tabset>
+            </crm-loading>
+          </uib-tab>
+          <uib-tab heading="Comments">
+          </uib-tab>
+          <uib-tab heading="Files">
+          </uib-tab>
+        </uib-tabset>
+      </div>
     </div>
-  </div>
-  <div ng-show="$ctrl.uiOptions.isAdmin"
-      class="row chr_leave-request-modal__response">
-    <div class="col-xs-12 form-horizontal">
-      <div class="form-group">
-        <label class="col-xs-4 control-label">Response
+    <div ng-show="$ctrl.uiOptions.isAdmin"
+        class="row chr_leave-request-modal__response">
+      <div class="col-xs-12 form-horizontal">
+        <div class="form-group">
+          <label class="col-xs-4 control-label">Response
           <i class="fa fa-asterisk"></i>
         </label>
-        <div class="col-xs-8">
-          <div class="chr_custom-select chr_custom-select--full">
-            <select ng-model="$ctrl.leaveRequest.selectedResponse">
+          <div class="col-xs-8">
+            <div class="chr_custom-select chr_custom-select--full">
+              <select ng-model="$ctrl.leaveRequest.selectedResponse">
               <option value="1">- select -</option>
               <option value="2">Approve</option>
               <option value="3">Reject</option>
               <option value="4">More Information Required</option>
               <option value="5">Cancel</option>
             </select>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div ng-show="$ctrl.leaveRequest.selectedResponse == 3">
+        <div class="col-xs-12">Please add a comment:</div>
+        <div class="col-xs-12">
+          <div class="chr_wysiwyg"
+              text-angular
+              prevent-animations
+              ta-toolbar="[['bold','italics','underline']]"
+              ng-model="myleave.leaveRequest.responseComment">
+          </div>
+          <div class="chr_wysiwyg__action">
+            <hr/>
+            <button class="btn btn-link">
+            <i class="fa fa-comment-o" aria-hidden="true"></i>
+            Add comment
+          </button>
           </div>
         </div>
       </div>
     </div>
-    <div ng-show="$ctrl.leaveRequest.selectedResponse == 3">
-      <div class="col-xs-12">Please add a comment:</div>
-      <div class="col-xs-12">
-        <div class="chr_wysiwyg"
-            text-angular
-            prevent-animations
-            ta-toolbar="[['bold','italics','underline']]"
-            ng-model="myleave.leaveRequest.responseComment">
-        </div>
-        <div class="chr_wysiwyg__action">
-          <hr/>
-          <button class="btn btn-link">
-            <i class="fa fa-comment-o" aria-hidden="true"></i>
-            Add comment
-          </button>
-        </div>
-      </div>
-    </div>
   </div>
-</div>
-<div class="modal-footer">
-  <button type="button"
-      class="btn btn-primary pull-left"
-      ng-click="$ctrl.cancel()">
+  <div ng-if="$ctrl.error"
+      uib-alert
+      class="danger"
+      close="$ctrl.closeAlert()"
+      dismiss-on-timeout="5000">{{$ctrl.error}}</div>
+  <div class="modal-footer">
+    <button type="button"
+        class="btn btn-primary pull-left"
+        ng-click="$ctrl.cancel()">
     Back
   </button>
-  <button type="submit"
-      class="btn btn-primary"
-      ng-click="$ctrl.submit()">Save</button>
-</div>
+    <button type="submit"
+        class="btn btn-primary"
+        ng-disabled="$ctrl.canSubmit()"
+        ng-click="$ctrl.submit()">Save</button>
+  </div>
+</crm-loading>
