--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -99,7 +99,7 @@
       </li>
     </ul>
     <div class="col-xs-9">
-      <table class="table chr_table--clean">
+      <table class="table table--clean">
         <thead>
         <tr>
           <th>Employee Name</th>
@@ -118,7 +118,7 @@
           <td class="text-center">
             <div class="btn-group">
               <button type="button"
-                      class="btn btn-default dropdown-toggle chr-button--inline"
+                      class="btn btn-default dropdown-toggle btn--inline"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false">
@@ -138,7 +138,7 @@
           <td class="text-center">
             <div class="btn-group">
               <button type="button"
-                      class="btn btn-default dropdown-toggle chr-button--inline"
+                      class="btn btn-default dropdown-toggle btn--inline"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false">
@@ -158,7 +158,7 @@
           <td class="text-center">
             <div class="btn-group">
               <button type="button"
-                      class="btn btn-default dropdown-toggle chr-button--inline"
+                      class="btn btn-default dropdown-toggle btn--inline"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false">
@@ -178,7 +178,7 @@
           <td class="text-center">
             <div class="btn-group">
               <button type="button"
-                      class="btn btn-default dropdown-toggle chr-button--inline"
+                      class="btn btn-default dropdown-toggle btn--inline"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false">
@@ -198,7 +198,7 @@
           <td class="text-center">
             <div class="btn-group">
               <button type="button"
-                      class="btn btn-default dropdown-toggle chr-button--inline"
+                      class="btn btn-default dropdown-toggle btn--inline"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false">
@@ -218,7 +218,7 @@
           <td class="text-center">
             <div class="btn-group">
               <button type="button"
-                      class="btn btn-default dropdown-toggle chr-button--inline"
+                      class="btn btn-default dropdown-toggle btn--inline"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false">
@@ -238,7 +238,7 @@
           <td class="text-center">
             <div class="btn-group">
               <button type="button"
-                      class="btn btn-default dropdown-toggle chr-button--inline"
+                      class="btn btn-default dropdown-toggle btn--inline"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false">
