PCHR-1827: Move styling in org.civicrm.boostrapcivicrm

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
@@ -1,4 +1,6 @@
 @import '../../../org.civicrm.bootstrap/scss/vendor/bootstrap/buttons';
+@import '../../../org.civicrm.bootstrap/scss/vendor/bootstrap/button-groups';
+@import '../../../org.civicrm.bootstrap/scss/vendor/bootstrap/modals';
 @import '../bootstrap/overrides/style/buttons';
 
 $button-border-radius: 2px;
