--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
@@ -9,6 +9,7 @@
 @import '../bootstrap/vendor/font-awesome/path';
 @import '../bootstrap/overrides/style/*';
 @import 'common/common';
+@import 'main-menu/main-menu';
 @import 'contact/contact';
 @import 'advanced-search/advanced-search';
 @import 'vacancies/vacancies';
