--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -213,7 +213,7 @@
                             </td>
                             <td ng-if="report.actionsFor(request).length">
                               <div uib-dropdown dropdown-append-to-body>
-                                <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                                <a href class="btn btn-default btn-inline" uib-dropdown-toggle>
                                   <i class="fa fa-ellipsis-v"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
@@ -375,7 +375,7 @@
                           </td>
                           <td ng-if="report.actionsFor(request).length">
                             <div uib-dropdown dropdown-append-to-body>
-                              <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                              <a href class="btn btn-default btn-inline" uib-dropdown-toggle>
                                 <i class="fa fa-ellipsis-v"></i>
                               </a>
                               <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
@@ -463,7 +463,7 @@
                           </td>
                           <td ng-if="report.actionsFor(request).length">
                             <div uib-dropdown dropdown-append-to-body>
-                              <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                              <a href class="btn btn-default btn-inline" uib-dropdown-toggle>
                                 <i class="fa fa-ellipsis-v"></i>
                               </a>
                               <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
