PCHR-1797: Remove unwanted class

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -1,4 +1,4 @@
-<div class="panel panel-w-subheading panel-default">
+<div class="panel panel-default">
   <div class="panel-heading row chr_manager_dashboard__header">
     <span class="panel-title">Manager Absence Approval</span>
     <div>
