PCHR-1797: PR Fixes

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading row chr_manager_dashboard__header">
     <span class="panel-title">Manager Absence Approval</span>
-    <div>
+    <span class="pull-right">
       <div class="chr_custom-select">
         <select>
           <option value="1">Leave Type</option>
@@ -23,7 +23,7 @@
         </i>
         Filter
     </span>
-    </div>
+    </span>
   </div>
   <div class="panel-subheading chr_manager_dashboard__sub-header" ng-show="isFilterExpanded">
     <div>
