--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave.html
@@ -7,7 +7,8 @@
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Action 1</a></li>
+        <li><a href="#">Record Sickness</a></li>
+        <li><a href="#">Record Overtime</a></li>
       </ul>
     </div>
   </div>
