--- a/com.civicrm.hrjobroles/scss/hrjobroles.scss
+++ b/com.civicrm.hrjobroles/scss/hrjobroles.scss
@@ -122,6 +122,7 @@
   @import "hrjobroles/partials/tables";
   @import "hrjobroles/partials/basic-details";
   @import "hrjobroles/partials/switch";
+  @import "hrjobroles/partials/spinner";
   @import "hrjobroles/partials/example";
 
 }
