--- a/org.civicrm.reqangular/src/common/templates/dialog.html
+++ b/org.civicrm.reqangular/src/common/templates/dialog.html
@@ -3,9 +3,11 @@
   <h4 class="modal-title">{{title}}</h4>
 </div>
 <div class="modal-body">
-  {{msg}}
+  <crm-loading show="!loading">
+    {{msg}}
+  </crm-loading>
 </div>
-<div class="modal-footer">
+<div class="modal-footer" ng-hide="loading">
   <button type="button" class="btn btn-link text-uppercase" ng-click="cancel()">{{copyCancel}}</button>
   <button type="button" class="btn {{classConfirm}} text-uppercase" ng-click="confirm()">{{copyConfirm}}</button>
 </div>
