PCHR-1820: Replace pension type select with contact auto-complete
In job contract tab , any place that showing  pension type select input is replaced
by contacts auto complete, also any view that still show and map pension type to option value
is replaced to show contact details instead.

--- a/hrjobcontract/views/contractSummary.html
+++ b/hrjobcontract/views/contractSummary.html
@@ -156,7 +156,7 @@
                     <div class="col-sm-6">
                         <p class="form-control-static">
                             <span ng-if="pension.is_enrolled !== ''" class="subfield">{{pension.is_enrolled == '2' ? 'Opted out' : pension.is_enrolled == '1' ? 'Enrolled' : 'Not Enrolled'}}</span>
-                            <span ng-if="pension.pension_type" class="subfield"><strong>Pension Type:</strong> {{pension.pension_type_label}}</span>
+                            <span ng-if="pension.pension_type" class="subfield"><strong>Pension Type:</strong> <span hrjc-contact="pension.pension_type" hrjc-contact-link="true"></span></span>
                             <span ng-if="pension.er_contrib_pct" class="subfield"><strong>Employer Contribution (%):</strong> {{pension.er_contrib_pct}}</span>
                             <span ng-if="pension.ee_contrib_pct" class="subfield"><strong>Employee Contribution (%):</strong> {{pension.ee_contrib_pct}}</span>
                             <span ng-if="pension.ee_contrib_abs | parseInt" class="subfield"><strong>Employee Contribution (absolute amount):</strong> {{pension.ee_contrib_abs | formatAmount}}</span>
